--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "samaritan",
+  "author": "samaritan",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -11,7 +11,9 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "less-middleware": "~2.2.1",
+    "mongodb-stitch": "^3.0.7",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "pug-cli": "^1.0.0-alpha6"
   }
 }
