--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "geoip-lite": "^1.2.1",
     "http-errors": "~1.6.2",
     "less-middleware": "~2.2.1",
     "mongodb-stitch": "^3.0.7",
